@@ -8,6 +8,7 @@ import org.eclipse.jface.action.IAction;
 import org.eclipse.jface.action.IMenuListener;
 import org.eclipse.jface.action.IMenuManager;
 import org.eclipse.jface.action.MenuManager;
+import org.eclipse.jface.action.StatusLineContributionItem;
 import org.eclipse.jface.resource.ImageDescriptor;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.events.DisposeEvent;
@@ -25,8 +26,11 @@ import org.eclipse.swt.widgets.Listener;
 import org.eclipse.swt.widgets.Menu;
 import org.eclipse.swt.widgets.ToolBar;
 import org.eclipse.swt.widgets.ToolItem;
+import org.eclipse.ui.internal.TrimUtil;
 
-import com.archimatetool.editor.ui.IArchimateImages;
+import com.archimatetool.editor.ui.ColorFactory;
+import com.archimatetool.editor.ui.IArchiImages;
+import com.archimatetool.editor.ui.ThemeUtils;
 
 
 /**
@@ -35,8 +39,12 @@ import com.archimatetool.editor.ui.IArchimateImages;
  * 
  * To show this set System Property to VM arguments as "-Dshowheap=true"
  */
+@SuppressWarnings("restriction")
 public class HeapStatusWidget extends Composite {
     
+    /**
+     * ContributionItem for a Toolbar
+     */
     public static class HeapStatusWidgetToolBarContributionItem extends ContributionItem {
         ToolItem toolitem;
         
@@ -56,11 +64,29 @@ public class HeapStatusWidget extends Composite {
         }
     };
     
+    /**
+     * ContributionItem for a Status Line
+     */
+    public static class HeapStatusWidgetStatusLineContributionItem extends StatusLineContributionItem {
+        public HeapStatusWidgetStatusLineContributionItem() {
+            super("heapStatus"); //$NON-NLS-1$
+            // Bug - have to set text to something for the widget to show
+            setText(" "); //$NON-NLS-1$
+        }
+
+        @Override
+        public void fill(Composite parent) {
+            super.fill(parent);
+            new HeapStatusWidget(parent);
+        }
+    };
+
+    
 	private boolean armed;
 	private Image gcImage;
 	private Image disabledGcImage;
 	private Color bgCol, usedMemCol, lowMemCol, freeMemCol, topLeftCol, bottomRightCol, sepCol, textCol, markCol, armCol;  
-    private Canvas button;
+    private Canvas canvas;
 	private int updateInterval = 500;
 	private boolean showMax = true;
     private long totalMem;
@@ -80,6 +106,7 @@ public class HeapStatusWidget extends Composite {
 	protected volatile boolean isInGC = false;
 
     private final Runnable timer = new Runnable() {
+        @Override
         public void run() {
             if (!isDisposed()) {
                 updateStats();
@@ -108,28 +135,30 @@ public class HeapStatusWidget extends Composite {
 		maxMem = getMaxMem();
 		maxMemKnown = maxMem != Long.MAX_VALUE;
 
-        button = new Canvas(this, SWT.NONE);
-        button.setToolTipText("Run Garbage Collector"); //$NON-NLS-1$
+		canvas = new Canvas(this, SWT.NONE);
+		canvas.setToolTipText("Run Garbage Collector"); //$NON-NLS-1$
         
-		ImageDescriptor imageDesc = IArchimateImages.ImageFactory.getImageDescriptor(IArchimateImages.ICON_TRASH_16);
+		ImageDescriptor imageDesc = IArchiImages.ImageFactory.getImageDescriptor(IArchiImages.ICON_TRASH);
 		Display display = getDisplay();
 		gcImage = imageDesc.createImage();
 		if (gcImage != null) {
 			imgBounds = gcImage.getBounds();
 			disabledGcImage = new Image(display, gcImage, SWT.IMAGE_DISABLE);
 		}
-		usedMemCol = display.getSystemColor(SWT.COLOR_INFO_BACKGROUND);
+		usedMemCol = new Color(display, 160, 160, 160); // gray
 		lowMemCol = new Color(display, 255, 70, 70);  // medium red 
 		freeMemCol = new Color(display, 255, 190, 125);  // light orange
+		sepCol = topLeftCol = armCol = usedMemCol;
 		bgCol = display.getSystemColor(SWT.COLOR_WIDGET_BACKGROUND);
-		sepCol = topLeftCol = armCol = display.getSystemColor(SWT.COLOR_WIDGET_NORMAL_SHADOW);
 		bottomRightCol = display.getSystemColor(SWT.COLOR_WIDGET_HIGHLIGHT_SHADOW);
-		markCol = textCol = display.getSystemColor(SWT.COLOR_INFO_FOREGROUND);
+        markCol = display.getSystemColor(SWT.COLOR_WIDGET_FOREGROUND);
+        textCol = ThemeUtils.isDarkTheme() ? ColorFactory.get(255, 255, 255) : markCol;
 		
 		createContextMenu();
 		
         Listener listener = new Listener() {
 
+            @Override
             public void handleEvent(Event event) {
                 switch (event.type) {
                 case SWT.Dispose:
@@ -137,13 +166,13 @@ public class HeapStatusWidget extends Composite {
                     break;
                 case SWT.Resize:
                     Rectangle rect = getClientArea();
-                    button.setBounds(rect.width - imgBounds.width - 1, 1, imgBounds.width, rect.height - 2);
+                    canvas.setBounds(rect.width - imgBounds.width - 1, 1, imgBounds.width, rect.height - 2);
                     break;
                 case SWT.Paint:
                     if (event.widget == HeapStatusWidget.this) {
                     	paintComposite(event.gc);
                     }
-                    else if (event.widget == button) {
+                    else if (event.widget == canvas) {
                         paintButton(event.gc);
                     }
                     break;
@@ -159,7 +188,7 @@ public class HeapStatusWidget extends Composite {
                     if (event.button == 1) {
 	                    if (event.widget == HeapStatusWidget.this) {
 							setMark();
-						} else if (event.widget == button) {
+						} else if (event.widget == canvas) {
 							if (!isInGC)
 								arm(true);
 						}
@@ -172,7 +201,7 @@ public class HeapStatusWidget extends Composite {
                 case SWT.MouseExit:
                     if (event.widget == HeapStatusWidget.this) {
                     	HeapStatusWidget.this.updateTooltip = false;
-					} else if (event.widget == button) {
+					} else if (event.widget == canvas) {
 						arm(false);
 					}
                     break;
@@ -186,16 +215,17 @@ public class HeapStatusWidget extends Composite {
         addListener(SWT.Resize, listener);
         addListener(SWT.MouseEnter, listener);
         addListener(SWT.MouseExit, listener);
-        button.addListener(SWT.MouseDown, listener);
-        button.addListener(SWT.MouseExit, listener);
-        button.addListener(SWT.MouseUp, listener);
-        button.addListener(SWT.Paint, listener);
+        canvas.addListener(SWT.MouseDown, listener);
+        canvas.addListener(SWT.MouseExit, listener);
+        canvas.addListener(SWT.MouseUp, listener);
+        canvas.addListener(SWT.Paint, listener);
 
 		// make sure stats are updated before first paint
 		updateStats();
 
         getDisplay().asyncExec(new Runnable() {
-			public void run() {
+			@Override
+            public void run() {
 				if (!isDisposed()) {
 					getDisplay().timerExec(updateInterval, timer);
 				}
@@ -203,7 +233,34 @@ public class HeapStatusWidget extends Composite {
 		});
    	}
 
-	/**
+    @Override
+    public void setBackground(Color color) {
+        bgCol = color;
+        canvas.redraw();
+    }
+
+    @Override
+    public void setForeground(Color color) {
+        if (color == null) {
+            markCol = getDisplay().getSystemColor(SWT.COLOR_WIDGET_FOREGROUND);
+        } else {
+            markCol = color;
+        }
+        
+        textCol = ThemeUtils.isDarkTheme() ? ColorFactory.get(255, 255, 255) : markCol;
+
+        canvas.redraw();
+    }
+
+    @Override
+    public Color getForeground() {
+        if (usedMemCol != null) {
+            return usedMemCol;
+        }
+        return getDisplay().getSystemColor(SWT.COLOR_INFO_BACKGROUND);
+    }
+
+    /**
 	 * Returns the maximum memory limit, or Long.MAX_VALUE if the max is not known.
 	 */
 	private long getMaxMem() {
@@ -238,7 +295,7 @@ public class HeapStatusWidget extends Composite {
 		}
 	}
 
-	@Override
+    @Override
     public Point computeSize(int wHint, int hHint, boolean changed) {
         GC gc = new GC(this);
         Point p = gc.textExtent("MMMMMMMMMMMM"); //$NON-NLS-1$
@@ -248,9 +305,9 @@ public class HeapStatusWidget extends Composite {
         //	- Image height + margins
         //	- Default Trim heightin 
         height = Math.max(height, p.y) + 4;
-        height = Math.max(24, height);
+        height = Math.max(TrimUtil.TRIM_DEFAULT_HEIGHT, height);
         gc.dispose();
-		return new Point(p.x + 15, height);
+        return new Point(p.x + 15, height);
 	}
 	
     private void arm(boolean armed) {
@@ -258,8 +315,8 @@ public class HeapStatusWidget extends Composite {
 			return;
 		}
         this.armed = armed;
-        button.redraw();
-        button.update();
+        canvas.redraw();
+        canvas.update();
     }
 
 	private void gcRunning(boolean isInGC) {
@@ -267,8 +324,8 @@ public class HeapStatusWidget extends Composite {
 			return;
 		}
 		this.isInGC = isInGC;
-		 button.redraw();
-		 button.update();
+		canvas.redraw();
+		canvas.update();
 	}
 
     /**
@@ -278,7 +335,8 @@ public class HeapStatusWidget extends Composite {
         MenuManager menuMgr = new MenuManager();
         menuMgr.setRemoveAllWhenShown(true);
         menuMgr.addMenuListener(new IMenuListener() {
-			public void menuAboutToShow(IMenuManager menuMgr) {
+			@Override
+            public void menuAboutToShow(IMenuManager menuMgr) {
 				fillMenu(menuMgr);
 			}
 		});
@@ -322,7 +380,8 @@ public class HeapStatusWidget extends Composite {
             public void run() {
 				busyGC();
 				getDisplay().asyncExec(new Runnable() {
-					public void run() {
+					@Override
+                    public void run() {
 						if (!isDisposed()) {
 							gcRunning(false);
 						}
@@ -341,7 +400,7 @@ public class HeapStatusWidget extends Composite {
     }
     
     private void paintButton(GC gc) {
-        Rectangle rect = button.getClientArea();
+        Rectangle rect = canvas.getClientArea();
 		if (isInGC) {
 			if (disabledGcImage != null) {
 				int buttonY = (rect.height - imgBounds.height) / 2 + rect.y;
@@ -379,7 +438,9 @@ public class HeapStatusWidget extends Composite {
         int uw = (int) (sw * usedMem / totalMem); // used mem width
         int ux = x + 1 + uw; // used mem right edge
         
-        gc.setBackground(bgCol);
+        if (bgCol != null) {
+            //gc.setBackground(bgCol);
+        }
         gc.fillRectangle(rect);
         gc.setForeground(sepCol);
 		gc.drawLine(dx, y, dx, y + h);
@@ -422,7 +483,9 @@ public class HeapStatusWidget extends Composite {
         int tw = (int) (sw * totalMem / maxMem); // current total mem width
         int tx = x + 1 + tw; // current total mem right edge
         
-        gc.setBackground(bgCol);
+        if(bgCol != null) {
+            //gc.setBackground(bgCol);
+        }
         gc.fillRectangle(rect);
         gc.setForeground(sepCol);
 		gc.drawLine(dx, y, dx, y + h);
@@ -505,7 +568,7 @@ public class HeapStatusWidget extends Composite {
      * Converts the given number of bytes to a printable number of megabytes (rounded up).
      */
     private String convertToMegString(long numBytes) {
-        return new Long(convertToMeg(numBytes)) + "M"; //$NON-NLS-1$
+        return Long.valueOf(convertToMeg(numBytes)) + "M"; //$NON-NLS-1$
     }
 
     /**
